--- a/boot-otel-tempo-api/src/main/resources/application.properties
+++ b/boot-otel-tempo-api/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port=8080
+
+app.template.context=template
+app.template.base=${TEMPLATE_URL_BASE}
+app.template.url=${app.template.base}/${app.template.context}
+
+spring.application.name=boot-greeting-app
+ 
+# Logging https://docs.spring.io/spring-boot/docs/2.4.2/reference/html/spring-boot-features.html#boot-features-logging
+  
+logging.pattern.console =%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
+ 
+logging.level.web=INFO
+logging.level.io.opentelemetry=DEBUG
+logging.level.root=INFO
 
