--- a/boot-otel-tempo-api/src/main/resources/application.properties
+++ b/boot-otel-tempo-api/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8080
 
-app.template.context=template
-app.template.base=${TEMPLATE_URL_BASE}
-app.template.url=${app.template.base}/${app.template.context}
+app.flights.context=flights
+app.provider1.base=${PROVIDER1_URL_BASE}
+app.provider1.url=${app.provider1.base}/${app.flights.context}
 
-spring.application.name=boot-greeting-app
+spring.application.name=boot-otel-tempo-api
  
 # Logging https://docs.spring.io/spring-boot/docs/2.4.2/reference/html/spring-boot-features.html#boot-features-logging
   
