--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,7 +61,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      TEMPLATE_URL_BASE: "http://boot-otel-tempo-provider1:8090"
+      PROVIDER1_URL_BASE: "http://boot-otel-tempo-provider1:8090"
     depends_on:
       - boot-otel-tempo-provider1
 
