--- a/boot-otel-tempo-provider1/src/main/resources/application.properties
+++ b/boot-otel-tempo-provider1/src/main/resources/application.properties
@@ -1,11 +1,39 @@
 server.port=8090
 
 spring.application.name=boot-otel-tempo-provider1
- 
-# Logging https://docs.spring.io/spring-boot/docs/2.4.2/reference/html/spring-boot-features.html#boot-features-logging
-  
+
+
+# DB
+## PostgreSQL
+#provider1.datasource.url=jdbc:postgresql://localhost:5432/provider1
+provider1.datasource.url=${PROVIDER1_DB_URL}
+provider1.datasource.username=${PROVIDER1_DB_USER}
+provider1.datasource.password=${PROVIDER1_DB_PASS}
+provider1.datasource.driver-class-name=org.postgresql.Driver
+
+## default connection pool
+provider1.datasource.hikari.connectionTimeout=20000
+provider1.datasource.hikari.maximumPoolSize=5
+#provider1.datasource.hikari.connection-test-query=SELECT 1
+
+provider1.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# JMX
+#management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=prometheus,health,info,metric
+
+#management.health.probes.enabled=true
+#management.endpoint.health.show-details=always
+
+# Logging 
+#https://docs.spring.io/spring-boot/docs/2.4.2/reference/html/spring-boot-features.html#boot-features-logging  
 logging.pattern.console =%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
- 
+
 logging.level.io.opentelemetry=DEBUG
 logging.level.web=INFO
 logging.level.root=INFO
+
+#logging.file.name=/app/log/${POD_NAME}.log
+#logging.file.max-size=10MB
+#logging.file.max-history=1
+#logging.file.clean-history-on-start=true
