prometheus and grafana

--- a/boot-otel-tempo-provider1/src/main/resources/application.properties
+++ b/boot-otel-tempo-provider1/src/main/resources/application.properties
@@ -19,11 +19,11 @@ provider1.datasource.hikari.maximumPoolSize=5
 provider1.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JMX
-#management.endpoints.web.exposure.include=*
-#management.endpoints.web.exposure.include=prometheus,health,info,metric
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=prometheus,health,info,metric
 
-#management.health.probes.enabled=true
-#management.endpoint.health.show-details=always
+management.health.probes.enabled=true
+management.endpoint.health.show-details=always
 
 # Logging 
 #https://docs.spring.io/spring-boot/docs/2.4.2/reference/html/spring-boot-features.html#boot-features-logging  
