grafana issue fix

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -87,6 +87,7 @@ services:
     volumes:
       - ./grafana-data/datasources:/etc/grafana/provisioning/datasources
       - ./grafana-data/dashboards-provisioning:/etc/grafana/provisioning/dashboards
+      - ./grafana-data/dashboards:/var/lib/grafana/dashboards
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
