--- a/grafana-data/dashboards-provisioning/dashboards.yaml
+++ b/grafana-data/dashboards-provisioning/dashboards.yaml
@@ -10,3 +10,5 @@ providers:
   editable: true
   updateIntervalSeconds: 3600
   allowUiUpdates: false
+  options:
+    path: /var/lib/grafana/dashboards
