--- a/etc/prometheus.yaml
+++ b/etc/prometheus.yaml
@@ -7,6 +7,14 @@ scrape_configs:
     static_configs:
     - targets: ['localhost:9090']
 
+  - job_name: 'tempo'
+    static_configs:
+    - targets: ['tempo:3100']
+
+  - job_name: 'loki'
+    static_configs:
+    - targets: ['loki:3100']
+
   - job_name: 'boot-otel-tempo-provider1'
     metrics_path: /actuator/prometheus
     static_configs:
