--- a/grafana-data/datasources/datasource.yml
+++ b/grafana-data/datasources/datasource.yml
@@ -3,6 +3,7 @@ apiVersion: 1
 deleteDatasources:
   - name: Prometheus
   - name: Tempo
+  - name: Loki
 
 datasources:
 - name: Prometheus
@@ -40,3 +41,20 @@ datasources:
     httpHeaderName1: 'Authorization'
   secureJsonData:
     httpHeaderValue1: 'Bearer foo-bar-baz'
+
+- name: Loki
+  type: loki
+  access: proxy
+  orgId: 1
+  url: http://loki:3100
+  basicAuth: false
+  isDefault: false
+  version: 1
+  editable: false
+  apiVersion: 1
+  jsonData:
+    derivedFields:
+      - datasourceUid: tempo
+        matcherRegex: (?:traceID|trace_id)=(\w+)
+        name: TraceID
+        url: $${__value.raw}
