--- a/boot-otel-tempo-api/src/main/resources/application.properties
+++ b/boot-otel-tempo-api/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8080
 
+spring.application.name=boot-otel-tempo-api
+
 app.flights.context=flights
 app.provider1.base=${PROVIDER1_URL_BASE}
 app.provider1.url=${app.provider1.base}/${app.flights.context}
-
-spring.application.name=boot-otel-tempo-api
 
 # JMX
 management.endpoints.web.exposure.include=*
@@ -15,9 +15,14 @@ management.endpoint.health.show-details=always
  
 # Logging
 ##https://docs.spring.io/spring-boot/docs/2.4.2/reference/html/spring-boot-features.html#boot-features-logging  
-logging.pattern.console =%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
  
 logging.level.web=INFO
 logging.level.io.opentelemetry=DEBUG
 logging.level.root=INFO
 
+logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
+logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
+logging.file.name=/app/logs/${spring.application.name}.log
+logging.file.max-size=10MB
+logging.file.max-history=1
+logging.file.clean-history-on-start=true
