--- a/boot-otel-tempo-provider1/src/main/resources/application.properties
+++ b/boot-otel-tempo-provider1/src/main/resources/application.properties
@@ -26,14 +26,16 @@ management.health.probes.enabled=true
 management.endpoint.health.show-details=always
 
 # Logging 
-#https://docs.spring.io/spring-boot/docs/2.4.2/reference/html/spring-boot-features.html#boot-features-logging  
-logging.pattern.console =%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
+#https://docs.spring.io/spring-boot/docs/2.4.2/reference/html/spring-boot-features.html#boot-features-logging 
 
 logging.level.io.opentelemetry=DEBUG
 logging.level.web=INFO
 logging.level.root=INFO
 
-#logging.file.name=/app/log/${POD_NAME}.log
-#logging.file.max-size=10MB
-#logging.file.max-history=1
-#logging.file.clean-history-on-start=true
+logging.pattern.console =%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
+logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
+logging.file.name=/app/logs/${spring.application.name}.log
+logging.file.max-size=10MB
+logging.file.max-history=1
+logging.file.clean-history-on-start=true
+
