--- a/boot-otel-tempo-provider1/Dockerfile
+++ b/boot-otel-tempo-provider1/Dockerfile
@@ -16,7 +16,7 @@ EXPOSE 8090
 # https://github.com/open-telemetry/opentelemetry-java-instrumentation
 ENV JAVA_OPTS "${JAVA_OPTS} \
   -Dotel.traces.exporter=jaeger \
-  -Dotel.exporter.jaeger.endpoint=tempo:14250 \
+  -Dotel.exporter.jaeger.endpoint=http://tempo:14250 \
   -Dotel.metrics.exporter=none \
   -Dotel.resource.attributes="service.name=${APP_NAME}" \
   -Dotel.javaagent.debug=false \
