--- a/boot-otel-tempo-mq-consumer/src/main/resources/application.properties
+++ b/boot-otel-tempo-mq-consumer/src/main/resources/application.properties
@@ -1,18 +1,16 @@
-server.port=8080
+server.port=8091
 
-spring.application.name=boot-otel-tempo-api
-
-app.flights.context=flights
-app.provider1.base=${PROVIDER1_URL_BASE}
-app.provider1.url=${app.provider1.base}/${app.flights.context}
+spring.application.name=boot-otel-tempo-mq-consumer
 
 # Rabbit
+spring.rabbitmq.listener.simple.prefetch=1
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=${RMQ_USER}
 spring.rabbitmq.password=${RMQ_PASS}
 
 rabbitmq.flight.dg.exchange=otel_flight_direct
+rabbitmq.flight.received.queue=flight.received.queue
 rabbitmq.flight.received.routingkey=flight.event.received
 
 
@@ -22,15 +20,15 @@ management.endpoints.web.exposure.include=prometheus,health,info,metric
 
 management.health.probes.enabled=true
 management.endpoint.health.show-details=always
- 
-# Logging
-##https://docs.spring.io/spring-boot/docs/2.4.2/reference/html/spring-boot-features.html#boot-features-logging  
- 
-logging.level.web=INFO
+
+# Logging 
+#https://docs.spring.io/spring-boot/docs/2.4.2/reference/html/spring-boot-features.html#boot-features-logging 
+
 logging.level.io.opentelemetry=DEBUG
+logging.level.web=INFO
 logging.level.root=INFO
 
-logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
+logging.pattern.console =%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
 logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr([${spring.application.name},%X{traceId},%X{spanId}]) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m %n%wEx
 logging.file.name=/app/logs/${spring.application.name}.log
 logging.file.max-size=10MB
