--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
 
   rabbitmq:
     image: rabbitmq:3.7.28-management
-    container_name: rabbitmq
+    #container_name: rabbitmq
     volumes:
         - ./etc/rabbitmq/:/etc/rabbitmq/
         - ./data/rabbitmq/data/:/var/lib/rabbitmq/
@@ -31,6 +31,18 @@ services:
         - 5672:5672    #amqp
         - 15672:15672  #http
         - 15692:15692  #prometheus
+
+  redis:
+    image: "redis:alpine"
+    #command: redis-server --requirepass sOmE_sEcUrE_pAsS
+    #hostname: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data/redis-data:/var/lib/redis
+      - ./etc/redis.conf:/usr/local/etc/redis/redis.conf
+    environment:
+     - REDIS_REPLICATION_MODE=maste
 
   provider1-db:
     image: postgres
