Added redis support

--- a/boot-otel-tempo-mq-consumer/src/main/resources/application.properties
+++ b/boot-otel-tempo-mq-consumer/src/main/resources/application.properties
@@ -13,6 +13,12 @@ rabbitmq.flight.dg.exchange=otel_flight_direct
 rabbitmq.flight.received.queue=flight.received.queue
 rabbitmq.flight.received.routingkey=flight.event.received
 
+# Redis
+spring.redis.cluster.nodes=${REDIS_CLUSTER_NODES}
+spring.redis.cluster.max-redirects=${REDIS_CLUSTER_MAX_REDIRECTS}
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
+
 
 # JMX
 management.endpoints.web.exposure.include=*
