--- a/boot-otel-tempo-mq-consumer/pom.xml
+++ b/boot-otel-tempo-mq-consumer/pom.xml
@@ -50,6 +50,11 @@
             <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-extension-annotations</artifactId>
         </dependency>
+        
+        <dependency>
+		  <groupId>io.opentelemetry</groupId>
+		  <artifactId>opentelemetry-semconv</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
