--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<opentelemetry.version>0.15.0</opentelemetry.version>
+		<version.opentelemetry-alpha>0.15.0-alpha</version.opentelemetry-alpha>
 		<docker-maven-plugin.version>0.34.1</docker-maven-plugin.version>
 	</properties>
 
@@ -32,6 +33,35 @@
 				<version>${opentelemetry.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			
+			<!--
+			<dependency>
+	            <groupId>io.opentelemetry</groupId>
+	            <artifactId>opentelemetry-sdk-extension-autoconfigure</artifactId>
+	            <version>${version.opentelemetry-alpha}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>io.opentelemetry</groupId>
+	            <artifactId>opentelemetry-api-metrics</artifactId>
+	            <version>${version.opentelemetry-alpha}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>io.opentelemetry</groupId>
+	            <artifactId>opentelemetry-sdk-metrics</artifactId>
+	            <version>${version.opentelemetry-alpha}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>io.opentelemetry</groupId>
+	            <artifactId>opentelemetry-exporter-otlp-metrics</artifactId>
+	            <version>${version.opentelemetry-alpha}</version>
+	        </dependency>
+	        -->
+	        
+	        <dependency>
+			  <groupId>io.opentelemetry</groupId>
+			  <artifactId>opentelemetry-semconv</artifactId>
+			  <version>${version.opentelemetry-alpha}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
