--- a/boot-otel-tempo-docker/pom.xml
+++ b/boot-otel-tempo-docker/pom.xml
@@ -17,44 +17,70 @@
 	<packaging>pom</packaging>
 
 	<build>
-		<plugins>
-			<plugin>
-			    <groupId>io.fabric8</groupId>
-			    <artifactId>docker-maven-plugin</artifactId>
-				<executions>
-		             <execution>
-		                 <id>start</id>
-		                 <phase>pre-integration-test</phase>
-		                 <goals>
-		                     <goal>build</goal>
-		                     <goal>start</goal>
-		                 </goals>
-		             </execution>
-		             <execution>
-		                 <id>stop</id>
-		                 <phase>post-integration-test</phase>
-		                 <goals>
-		                     <goal>stop</goal>
-		                 </goals>
-		             </execution>
-		         </executions>
-			     <configuration>
-			        <images>
-			            <image>	
-			            	<name>mnadeem/${project.artifactId}</name>		
-			                <build>
-			                    <dockerFile>${project.basedir}/Dockerfile</dockerFile>
-			                    <tags>
-							      	<tag>${project.version}</tag>
-                                	<tag>latest</tag>
-							    </tags>
-			                </build>
-			            </image>			
-			        </images>		        
-			     </configuration>
-			</plugin>			
-		</plugins>
-		
-	</build>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-dependency-plugin</artifactId>
+			<executions>
+				<execution>
+					<id>copy</id>
+					<phase>package</phase>
+					<goals>
+						<goal>copy</goal>
+					</goals>
+					<configuration>
+						<artifactItems>
+							<artifactItem>
+								<groupId>io.opentelemetry.javaagent</groupId>
+								<artifactId>opentelemetry-javaagent</artifactId>
+								<version>0.15.0</version>
+								<type>jar</type>
+								<overWrite>false</overWrite>
+								<!-- <outputDirectory>${project.build.directory}/agent</outputDirectory>   -->
+								<outputDirectory>${project.basedir}/agent</outputDirectory>
+							</artifactItem>
+						</artifactItems>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
+		<plugin>
+			<groupId>io.fabric8</groupId>
+			<artifactId>docker-maven-plugin</artifactId>
+			<executions>
+				<execution>
+					<id>start</id>
+					<phase>pre-integration-test</phase>
+					<goals>
+						<goal>build</goal>
+						<goal>start</goal>
+					</goals>
+				</execution>
+				<execution>
+					<id>stop</id>
+					<phase>post-integration-test</phase>
+					<goals>
+						<goal>stop</goal>
+					</goals>
+				</execution>
+			</executions>
+			<configuration>
+				<images>
+					<image>
+						<name>mnadeem/${project.artifactId}</name>
+						<build>
+							<dockerFile>${project.basedir}/Dockerfile</dockerFile>
+							<tags>
+								<tag>${project.version}</tag>
+								<tag>latest</tag>
+							</tags>
+						</build>
+					</image>
+				</images>
+			</configuration>
+		</plugin>
+	</plugins>
+
+</build>
 	
 </project>
