--- a/boot-otel-tempo-docker/pom.xml
+++ b/boot-otel-tempo-docker/pom.xml
@@ -3,13 +3,13 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>io.opentelemetry.example</groupId>
 		<artifactId>boot-opentelemetry-tempo</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	
+
 	<artifactId>boot-otel-tempo-docker</artifactId>
 
 	<name>boot-otel-tempo-docker</name>
@@ -19,42 +19,67 @@
 	<build>
 		<plugins>
 			<plugin>
-			    <groupId>io.fabric8</groupId>
-			    <artifactId>docker-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
-		             <execution>
-		                 <id>start</id>
-		                 <phase>pre-integration-test</phase>
-		                 <goals>
-		                     <goal>build</goal>
-		                     <goal>start</goal>
-		                 </goals>
-		             </execution>
-		             <execution>
-		                 <id>stop</id>
-		                 <phase>post-integration-test</phase>
-		                 <goals>
-		                     <goal>stop</goal>
-		                 </goals>
-		             </execution>
-		         </executions>
-			     <configuration>
-			        <images>
-			            <image>	
-			            	<name>mnadeem/${project.artifactId}</name>		
-			                <build>
-			                    <dockerFile>${project.basedir}/Dockerfile</dockerFile>
-			                    <tags>
-							      	<tag>${project.version}</tag>
-                                	<tag>latest</tag>
-							    </tags>
-			                </build>
-			            </image>			
-			        </images>		        
-			     </configuration>
+					<execution>
+						<id>copy</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>io.opentelemetry.javaagent</groupId>
+									<artifactId>opentelemetry-javaagent</artifactId>
+									<version>${opentelemetry-agent.version}</version>
+									<type>jar</type>
+									<overWrite>false</overWrite>
+									<!-- <outputDirectory>${project.build.directory}/agent</outputDirectory> -->
+									<outputDirectory>${project.basedir}/agent</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>			
+			<plugin>
+				<groupId>io.fabric8</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>start</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>build</goal>
+							<goal>start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<images>
+						<image>
+							<name>mnadeem/${project.artifactId}</name>
+							<build>
+								<dockerFile>${project.basedir}/Dockerfile</dockerFile>
+								<tags>
+									<tag>${project.version}</tag>
+									<tag>latest</tag>
+								</tags>
+							</build>
+						</image>
+					</images>
+				</configuration>
+			</plugin>
 		</plugins>
-		
+
 	</build>
-	
 </project>
