download agent jar

--- a/boot-otel-tempo-docker/pom.xml
+++ b/boot-otel-tempo-docker/pom.xml
@@ -19,6 +19,32 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>io.opentelemetry.javaagent</groupId>
+									<artifactId>opentelemetry-javaagent</artifactId>
+									<version>${opentelemetry-agent.version}</version>
+									<type>jar</type>
+									<overWrite>false</overWrite>
+									<!-- <outputDirectory>${project.build.directory}/agent</outputDirectory> -->
+									<outputDirectory>${project.basedir}/agent</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 			    <groupId>io.fabric8</groupId>
 			    <artifactId>docker-maven-plugin</artifactId>
 				<executions>
