extract trace id

--- a/data/grafana-data/datasources/datasource.yml
+++ b/data/grafana-data/datasources/datasource.yml
@@ -55,6 +55,6 @@ datasources:
   jsonData:
     derivedFields:
       - datasourceUid: tempo
-        matcherRegex: (?:traceID|trace_id)=(\w+)
+        matcherRegex: \[.+,(.+),.+\]
         name: TraceID
         url: $${__value.raw}
